addded squares assets strange things happen for squares.. our algo is on avg min dist really bad, but has the least covered lines

--- a/main.tex
+++ b/main.tex
@@ -718,6 +718,43 @@ our Stacking & 0 & 2.342 & 6.283 & 75.034 & 0.859 & 0.77\\
 
 
 
+\begin{table}[h]
+\begin{center}
+    \begin{tabular}{| l || l | l | l|  }
+    \hline
+    algorithm & covered & minDist & minDistAvg \\
+    \hline
+
+random Stacking+random rotations & 35 &  0.361 (0) & 35.846\\
+
+Painter+random rotations & 17 &  0.251 (0) & 34.406\\
+
+
+random Stacking+heuristic rotations & 26  & 0.038 (0)& 34.776\\
+
+Painter+heuristic & 14 & 0.263 (0)& 32.061\\
+
+our Stacking & 7 &  0.078 (0)& 25.232\\
+
+
+ \hline
+\end{tabular}
+\end{center}
+\caption{pie charts\\
+ date: 22.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  } 
+
+\end{table}
+\begin{figure}[h]
+\centering
+\includegraphics[height=7cm]{assets/squaresEval}
+\caption{squares\\
+ date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
+\end{figure}
+
+
+
+
+
 \newpage
 
 \begin{thebibliography}{999}
