changed on figure in davids proof

--- a/main.tex
+++ b/main.tex
@@ -390,7 +390,7 @@ The graph $G(\mathcal{I})$ is bipartite, has a node for each variable on one sid
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=15cm, height=10cm]{assets/np-hardness/incidence_graph.png}
+\includegraphics[ height=6.5cm]{assets/np-hardness/incidence_graph.png}
 \caption{The incidence graph $G(\mathcal{I})$}
 \end{figure}
 
